show_grid now updates selected row in response to stream event, using new feature in qgrid.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180711 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180711 Trench segmentation.ipynb
@@ -101,16 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%store -r trench_df4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df = trench_df4"
+    "%store -r trench_points trench_diag"
    ]
   },
   {
@@ -562,8 +553,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# g = ui.show_grid(df, stream=frame_stream)\n",
-    "# g"
+    "g = ui.show_grid(selected, stream=frame_stream)\n",
+    "g"
    ]
   },
   {
@@ -613,10 +604,17 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "workflow.get_trench_stacks(\n",
+    "trench_stacks = workflow.get_trench_stacks(\n",
     "    trenches, all_frames, transformation=lambda x: np.array(x).shape\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
