Partially solved the trench detection failures when there is debris in feeding channel by running np.trim_zeros before getting periodogram. Trench end detection still needs to be improved.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180711 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180711 Trench segmentation.ipynb
@@ -565,8 +565,92 @@
    "source": [
     "%%time\n",
     "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
-    "# frame = workflow.get_nd2_frame(filename='/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2', position=0, channel='MCHERRY', t=0)\n",
     "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = get_in(\"label_2.find_trench_lines.hough_1.log_hough\".split(\".\"), diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = get_in(\"label_2.find_trench_lines.hough_1.input\".split(\".\"), diag).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = (\n",
+    "    get_in(\"label_2.find_trench_lines.hough_1.profile\".split(\".\"), diag)\n",
+    "    .Curve.I.data[\"y\"]\n",
+    "    .values\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs, Pxx = scipy.signal.periodogram(np.trim_zeros(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(Pxx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = image.hough_line_intensity(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(~np.isnan(a.data)).sum()"
    ]
   },
   {
