--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -4,6 +4,12 @@ my segmentation
 charles segmentation
 pandas schema for cell lineages
 
+fix trench detection with debris in feeding channel (TxnErr002.nd2)
+    angle/pitch finding seems to mostly work
+        debug pitch bias issue (frequencing sampling?)
+        don't count 0 values in offset calculation
+    trench end detection needs to be improve
+
 get per-timepoint, per-trench focus locally
 per-trench focus with dask
 segmentation with dask
@@ -23,7 +29,6 @@ frame_viewer/image_viewer (takes a dict); easy callback to wrap a regrid??
 plot trench 95% percentile brightness vs. time, click on a plot to show plot in frame_viewer
 
 ### POSTPONED
-fix trench detection with debris in feeding channel (TxnErr002.nd2)
 frame histogram (clustering or thresholding) for frame quality
 errors as dataframe
 fix edge_points on boundary/corners (result should be continuous when adding epsilon to coordinates)
