WIP faster get_trench_stacks.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180711 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180711 Trench segmentation.ipynb
@@ -410,6 +410,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trench_points2[\"top\"].values.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_in(\n",
+    "    (\n",
+    "        \"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\",\n",
+    "        \"image_attributes\",\n",
+    "        \"SLxImageAttributes\",\n",
+    "        \"uiWidth\",\n",
+    "    ),\n",
+    "    metadata,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(x):\n",
+    "    top_points = x[\"top\"].values\n",
+    "    bottom_points = x[\"bottom\"].values\n",
+    "    upper_left, lower_right = zip(\n",
+    "        [\n",
+    "            geometry.get_trench_bbox((top_points, bottom_points), trench, x_lim, y_lim)\n",
+    "            for trench in x[\"trench\"]\n",
+    "        ]\n",
+    "    )\n",
+    "    print(upper_left)\n",
+    "    df = pd.concat(\n",
+    "        {\n",
+    "            \"upper_left\": pd.DataFrame({\"x\": upper_left[:, 0], \"y\": upper_left[:, 1]}),\n",
+    "            \"lower_right\": pd.DataFrame(\n",
+    "                {\"x\": lower_right[:, 0], \"y\": lower_right[:, 1]}\n",
+    "            ),\n",
+    "        }\n",
+    "    )\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "trench_points2[:10].reset_index().groupby(\n",
+    "    [\"filename\", \"position\", \"channel\", \"t\", \"trench_set\"]\n",
+    ").apply(func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = next(\n",
+    "    iter(trench_points2.groupby([\"filename\", \"position\", \"channel\", \"t\", \"trench_set\"]))\n",
+    ")[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_points = y[\"top\"].values\n",
+    "bottom_points = y[\"bottom\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_points2 = trench_points.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "len(trench_points)"
    ]
   },
@@ -574,6 +669,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "frame.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "a = get_in(\"label_2.find_trench_lines.hough_1.log_hough\".split(\".\"), diag)"
    ]
   },
@@ -676,8 +780,7 @@
    "outputs": [],
    "source": [
     "trenches = trench_points_good.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\", :3, [\"MCHERRY\"], 0, :, :],\n",
-    "    :,\n",
+    "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\", :3, [\"MCHERRY\"], 0, :, :], :\n",
     "]"
    ]
   },
@@ -688,9 +791,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trench_stacks = workflow.get_trench_stacks(\n",
-    "    trenches, all_frames, transformation=lambda x: np.array(x).shape\n",
-    ")"
+    "trench_stacks = workflow.get_trench_stacks(trenches, all_frames)"
    ]
   },
   {
@@ -698,7 +799,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%lprun -m workflow workflow.get_trench_stacks(trenches, all_frames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_stack = list(trench_stacks.values())[300]\n",
+    "hv.HoloMap({t: ui.RevImage(img_stack[t, :, :]) for t in range(img_stack.shape[0])})"
+   ]
   },
   {
    "cell_type": "markdown",
