--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -1,8 +1,10 @@
 ### TODAY
-load trench stacks into memory
-my segmentation
+channels as categoricals in all_frames
+optimize get_trench_stacks
+    check that pickle/unpickling doesn't screw up speed of accessing .values for upper_left/lower_right
 charles segmentation
 pandas schema for cell lineages
+get_trench_stacks: easy way to load in different channels
 
 fix trench detection with debris in feeding channel (TxnErr002.nd2)
     angle/pitch finding seems to mostly work
