Finished get_trench_stacks.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180712 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180712 Trench segmentation.ipynb
@@ -779,15 +779,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_in(\n",
-    "    (\n",
-    "        \"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\",\n",
-    "        \"image_attributes\",\n",
-    "        \"SLxImageAttributes\",\n",
-    "        \"uiWidth\",\n",
-    "    ),\n",
-    "    metadata,\n",
+    "%%time\n",
+    "trench_bboxes = workflow.get_trench_bboxes(\n",
+    "    trench_points_good, workflow.get_filename_image_limits(metadata)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trench_points_good = pd.concat([trench_points_good, trench_bboxes], axis=1)"
    ]
   },
   {
@@ -799,15 +804,6 @@
     "trenches = trench_points_good.loc[\n",
     "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\", :3, [\"MCHERRY\"], 0, :, :], :\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_limits = workflow.get_filename_image_limits(metadata)"
    ]
   },
   {
@@ -835,7 +831,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_stack = list(trench_stacks.values())[55]\n",
+    "img_stack = list(trench_stacks.values())[2]\n",
     "hv.HoloMap({t: ui.RevImage(img_stack[t, :, :]) for t in range(img_stack.shape[0])})"
    ]
   },
