--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180712 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180712 Trench segmentation.ipynb
@@ -73,7 +73,8 @@
     "import common, trench_detection, util\n",
     "import ui, diagnostics, metadata\n",
     "import workflow, image, geometry\n",
-    "import trench_detection.hough, trench_detection.core"
+    "import trench_detection.hough, trench_detection.core\n",
+    "import trench_segmentation.watershed"
    ]
   },
   {
@@ -822,7 +823,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%lprun -m workflow workflow.get_trench_stacks(trenches, all_frames, image_limits)"
+    "from trench_segmentation.watershed import _trench_img"
    ]
   },
   {
@@ -831,8 +832,215 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_stack = list(trench_stacks.values())[2]\n",
-    "hv.HoloMap({t: ui.RevImage(img_stack[t, :, :]) for t in range(img_stack.shape[0])})"
+    "img_stack = list(trench_stacks.values())[120]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_seg, trench_seg_diag, _ = diagnostics.wrap_diagnostics(\n",
+    "    trench_segmentation.watershed.segment_trench2\n",
+    ")(img_stack[91])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(trench_seg_diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "segs, seg_diags, seg_errs = zip(\n",
+    "    *[\n",
+    "        diagnostics.wrap_diagnostics(trench_segmentation.watershed.segment_trench2)(img)\n",
+    "        for img in img_stack\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.HoloMap({t: _trench_img(img) for t, img in enumerate(segs)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(seg_diags[91])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = img_stack[91].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_blurred = skimage.filters.gaussian(img, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_blurred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_k1, img_k2 = image.hessian_eigenvalues(img_blurred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_k1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_k1_frangi = skimage.filters.frangi(img_k1, scale_range=(1, 3), scale_step=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.RevImage(img_k1_frangi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_k1_frangi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_k1_thresh = img_k1_frangi > skimage.filters.threshold_otsu(img_k1_frangi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_k1_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(\n",
+    "    skimage.filters.roberts_pos_diag(img_k1) - skimage.filters.roberts_neg_diag(img_k1)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_k2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_thresh = img_blurred > skimage.filters.threshold_otsu(img_blurred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_edt = scipy.ndimage.distance_transform_edt(img_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_edt)"
    ]
   },
   {
