Restrict trench segmentation watershed seeds to lie inside mask. The new trench segmentation seems to work extremely well.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180712 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180712 Trench segmentation.ipynb
@@ -411,92 +411,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_points2[\"top\"].values.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_in(\n",
-    "    (\n",
-    "        \"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\",\n",
-    "        \"image_attributes\",\n",
-    "        \"SLxImageAttributes\",\n",
-    "        \"uiWidth\",\n",
-    "    ),\n",
-    "    metadata,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def func(x):\n",
-    "    top_points = x[\"top\"].values\n",
-    "    bottom_points = x[\"bottom\"].values\n",
-    "    upper_left, lower_right = zip(\n",
-    "        [\n",
-    "            geometry.get_trench_bbox((top_points, bottom_points), trench, x_lim, y_lim)\n",
-    "            for trench in x[\"trench\"]\n",
-    "        ]\n",
-    "    )\n",
-    "    print(upper_left)\n",
-    "    df = pd.concat(\n",
-    "        {\n",
-    "            \"upper_left\": pd.DataFrame({\"x\": upper_left[:, 0], \"y\": upper_left[:, 1]}),\n",
-    "            \"lower_right\": pd.DataFrame(\n",
-    "                {\"x\": lower_right[:, 0], \"y\": lower_right[:, 1]}\n",
-    "            ),\n",
-    "        }\n",
-    "    )\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "trench_points2[:10].reset_index().groupby(\n",
-    "    [\"filename\", \"position\", \"channel\", \"t\", \"trench_set\"]\n",
-    ").apply(func)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = next(\n",
-    "    iter(trench_points2.groupby([\"filename\", \"position\", \"channel\", \"t\", \"trench_set\"]))\n",
-    ")[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top_points = y[\"top\"].values\n",
-    "bottom_points = y[\"bottom\"].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "trench_points2 = trench_points.copy()"
    ]
   },
@@ -780,29 +694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "trench_bboxes = workflow.get_trench_bboxes(\n",
-    "    trench_points_good, workflow.get_filename_image_limits(metadata)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "trench_points_good = pd.concat([trench_points_good, trench_bboxes], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trenches = trench_points_good.loc[\n",
+    "selected_trenches = trench_points_good.loc[\n",
     "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\", :3, [\"MCHERRY\"], 0, :, :], :\n",
     "]"
    ]
@@ -814,7 +706,31 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trench_stacks = workflow.get_trench_stacks(trenches, all_frames, image_limits)"
+    "selected_trench_bboxes = workflow.get_trench_bboxes(\n",
+    "    selected_trenches, workflow.get_filename_image_limits(metadata)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "selected_trenches = pd.concat([selected_trenches, selected_trench_bboxes], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trench_stacks = workflow.get_trench_stacks(\n",
+    "    selected_trenches, all_frames, workflow.get_filename_image_limits(metadata)\n",
+    ")"
    ]
   },
   {
@@ -832,7 +748,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_stack = list(trench_stacks.values())[120]"
+    "list(trench_stacks.keys())[224]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_stack = list(trench_stacks.values())[624]"
    ]
   },
   {
@@ -842,7 +767,7 @@
    "outputs": [],
    "source": [
     "trench_seg, trench_seg_diag, _ = diagnostics.wrap_diagnostics(\n",
-    "    trench_segmentation.watershed.segment_trench2\n",
+    "    trench_segmentation.watershed.segment_trench\n",
     ")(img_stack[91])"
    ]
   },
@@ -864,7 +789,7 @@
     "%%time\n",
     "segs, seg_diags, seg_errs = zip(\n",
     "    *[\n",
-    "        diagnostics.wrap_diagnostics(trench_segmentation.watershed.segment_trench2)(img)\n",
+    "        diagnostics.wrap_diagnostics(trench_segmentation.watershed.segment_trench)(img)\n",
     "        for img in img_stack\n",
     "    ]\n",
     ")"
@@ -876,7 +801,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.HoloMap({t: _trench_img(img) for t, img in enumerate(segs)})"
+    "%%opts Image [width=120,height=400]\n",
+    "%%opts Layout [normalize=False]\n",
+    "(\n",
+    "    hv.HoloMap({t: hv.Image(img) for t, img in enumerate(img_stack)})\n",
+    "    + hv.HoloMap({t: hv.Image(img) for t, img in enumerate(segs)})\n",
+    ")  # .cols(1)"
    ]
   },
   {
@@ -885,7 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(seg_diags[91])"
+    "ui.show_plot_browser(seg_diags[62])"
    ]
   },
   {
