--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180712 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180712 Trench segmentation.ipynb
@@ -757,7 +757,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_stack = list(trench_stacks.values())[624]"
+    "img_stack = list(trench_stacks.values())[390]"
    ]
   },
   {
@@ -816,6 +816,24 @@
    "outputs": [],
    "source": [
     "ui.show_plot_browser(seg_diags[62])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%lprun -m trench_segmentation.watershed zip(*[diagnostics.wrap_diagnostics(trench_segmentation.watershed.segment_trench)(img) for img in img_stack])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%lprun -m trench_segmentation.watershed [trench_segmentation.watershed.segment_trench(img) for img in img_stack]"
    ]
   },
   {
