Got dask trench bbox computation working.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180714 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180714 Trench segmentation.ipynb
@@ -411,15 +411,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_points2 = trench_points.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "len(trench_points)"
    ]
   },
@@ -439,15 +430,6 @@
    "metadata": {},
    "source": [
     "## Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_diag.tail()"
    ]
   },
   {
@@ -495,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_points_good.head()"
+    "(len(trench_points_good), len(trench_points_good) / len(trench_points))"
    ]
   },
   {
@@ -504,7 +486,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(len(trench_points_good), len(trench_points_good) / len(trench_points))"
+    "%%time\n",
+    "image_limits = workflow.get_filename_image_limits(metadata)\n",
+    "trench_bbox_futures = []\n",
+    "for _, trenches in trench_points_good.groupby([\"filename\", \"position\"]):\n",
+    "    trench_bbox_futures.append(\n",
+    "        client.submit(workflow.get_trench_bboxes, trenches, image_limits)\n",
+    "    )\n",
+    "# trench_bboxes_results = client.gather(trench_bbox_futures)\n",
+    "# trench_bboxes = pd.concat(pd.concat(trench_bboxes_results, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trench_bbox_results = util.apply_map_futures(\n",
+    "    client.gather, trench_bbox_futures, predicate=lambda x: x.status == \"finished\"\n",
+    ")\n",
+    "trench_bboxes = pd.concat(\n",
+    "    [trench_points_good, pd.concat(trench_bbox_results, axis=0)], axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "%store trench_bboxes"
    ]
   },
   {
@@ -584,100 +599,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = get_in(\"label_2.find_trench_lines.hough_1.log_hough\".split(\".\"), diag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = get_in(\"label_2.find_trench_lines.hough_1.input\".split(\".\"), diag).data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = (\n",
-    "    get_in(\"label_2.find_trench_lines.hough_1.profile\".split(\".\"), diag)\n",
-    "    .Curve.I.data[\"y\"]\n",
-    "    .values\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs, Pxx = scipy.signal.periodogram(np.trim_zeros(d))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(Pxx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = image.hough_line_intensity(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(~np.isnan(a.data)).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ui.show_plot_browser(diag)"
    ]
   },
@@ -727,57 +648,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "selected_trenches.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "trench_stacks = workflow.get_trench_stacks(\n",
     "    selected_trenches, all_frames, workflow.get_filename_image_limits(metadata)\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from trench_segmentation.watershed import _trench_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(trench_stacks.keys())[224]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_stack = list(trench_stacks.values())[190]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_seg, trench_seg_diag, _ = diagnostics.wrap_diagnostics(\n",
-    "    trench_segmentation.watershed.segment_trench\n",
-    ")(img_stack[91])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_plot_browser(trench_seg_diag)"
    ]
   },
   {
@@ -793,203 +676,6 @@
     "        for img in img_stack\n",
     "    ]\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%opts Image [width=120,height=400]\n",
-    "%%opts Layout [normalize=False]\n",
-    "(\n",
-    "    hv.HoloMap({t: hv.Image(img) for t, img in enumerate(img_stack)})\n",
-    "    + hv.HoloMap({t: hv.Image(img) for t, img in enumerate(segs)})\n",
-    ")  # .cols(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_plot_browser(seg_diags[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%prun [trench_segmentation.watershed.segment_trench(img) for img in img_stack]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%lprun -m trench_segmentation.watershed [trench_segmentation.watershed.segment_trench(img) for img in img_stack]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = img_stack[0].T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_blurred = skimage.filters.gaussian(img, 0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img_blurred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_k1, img_k2 = image.hessian_eigenvalues(img_blurred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img_k1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "plt.imshow(skimage.filters.frangi(img_k1, scale_range=(1, 3), scale_step=0.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.RevImage(img_k1_frangi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img_k1_frangi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_k1_thresh = img_k1_frangi > skimage.filters.threshold_otsu(img_k1_frangi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img_k1_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(\n",
-    "    skimage.filters.roberts_pos_diag(img_k1) - skimage.filters.roberts_neg_diag(img_k1)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img_k2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_thresh = img_blurred > skimage.filters.threshold_otsu(img_blurred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_edt = scipy.ndimage.distance_transform_edt(img_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img_edt)"
    ]
   },
   {
