--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -1,12 +1,7 @@
 ### TODAY
-solve RevImage performance problem (how much faster is trench detection? why isn't this a problem for trench detection??)
-    why is hv.Image faster, spit out division warnings?
-    does this have to do with calculating the range of the image? how can I fix this? [no?]
-    or sending in a transposed/reversed numpy array? [no?]
-    strategy for allowing trench_detection, trench_segmentation to return a dataframe of metadata without incurring cost of constructing holoviews objects which will never be used
-        how fast is dask transfer vs recomputing locally?
-channels as categoricals in all_frames
-figure out whether image stacks are reversed or not
+get_trench_stacks: easy way to load in different channels
+pandas schema for cell lineages
+
 ui function to easily subset keys in diag, show slider to browse timepoints in trench segmentation diag
     dataframe_browser with sliders for trench_set, trench, t
 fine-tune trench positions using peakfinder
@@ -15,8 +10,8 @@ fine-tune trench positions using peakfinder
     dask find bboxes
     use columns to filter out empty trenches (after finding bboxes!)
 
-get_trench_stacks: easy way to load in different channels
-pandas schema for cell lineages
+strategy for allowing trench_detection, trench_segmentation to return a dataframe of metadata without incurring cost of constructing holoviews objects which will never be used
+    how fast is dask transfer vs recomputing locally?
 
 get segmentation working better with trench normalize? (lower threshold?)
     or does otsu threshold already work well enough? (for trenches with uneven brightness along axis)
@@ -86,6 +81,8 @@ submit workload balancing dask.distributed issue
     update priority: so that wrapped_diagnostics_to_dataframe run+transfer ASAP
 
 ### TRENCH DETECTION POLISH
+optimize holoviews .options and and .max for trench_segmentation
+    report issue related to my pickling issue?
 defaultdict which can filter out hv.ViewableElements so we don't waste memory on plots we'll never pull down
     benchmark how long constructing holoviews objs takes vs. no holoviews objs for get_trenches_diag
     benchmark how long it takes to pickle+pull down from a worker vs. re-run get_trenches locally
